--- a/cs5610project2/package.json
+++ b/cs5610project2/package.json
@@ -16,6 +16,8 @@
     "redux": "^4.1.2",
     "web-vitals": "^1.1.2"
   },
+  "engines": { "node": "YOUR_VERSION_OF_NODE",
+    "npm": "YOUR_VERSION_OF_NPM"},
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
